# telegram-bot

./: .gitignore  Makefile  README.md  cobe.py  cobeAsk.py  interject.txt  los-programadores-bot.cabal  markov.py  markovTrain.py  messages.awk  stack.yaml
src/: Actions.hs  BTFO.hs  Database.hs  Logger.hs  Main.hs  Plots.hs  Server.hs
