name:                los-programadores-bot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/los-programadores-bot#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable los-programadores-bot
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       telegram-api,
                       http-client,
                       http-client-tls,
                       persistent,
                       persistent-template,
                       persistent-sqlite,
                       mtl,
                       resourcet,
                       monad-logger,
                       text,
                       esqueleto,
                       process,
                       fast-logger,
                       transformers,
                       cereal,
                       cereal-text,
                       bytestring
